Site build functional.

--- a/site/templates/default.html
+++ b/site/templates/default.html
@@ -24,7 +24,6 @@
         <nav>
             <a href="/">Home</a>
             <a href="/about/">About</a>
-            <a href="/policies/">Policies</a>
             <a href="/archives/">Archives</a>
         </nav>
     </header>
@@ -35,7 +34,7 @@
     </main>
 
     <footer>
-        <p>Copyright &copy; 2008 &mdash; 2023 Yoo Chung</p>
+        <p>Copyright &copy; 2008-2023 Yoo Chung</p>
     </footer>
 </body>
 
