Put title in header.

--- a/site/templates/default.html
+++ b/site/templates/default.html
@@ -21,6 +21,8 @@
 
 <body>
     <header>
+        <h1>$if(front)$Stochastic Scribbles$else$$title$$endif$</h1>
+        <p>Random musings on random topics from Yoo Chung.</p>
         <nav>
             <a href="/">Home</a>
             <a href="/about/">About</a>
@@ -29,7 +31,6 @@
     </header>
 
     <main role="main">
-        <h1>$if(front)$Stochastic Scribbles$else$$title$$endif$</h1>
         $body$
     </main>
 
