Set up complete stylesheet and front page.

--- a/site/templates/default.html
+++ b/site/templates/default.html
@@ -40,7 +40,8 @@
     </main>
 
     <footer>
-      <p>Copyright &copy; 2008-2023 Yoo Chung</p>
+      <div>Powered by <a href="https://jaspervdj.be/hakyll/">Hakyll</a> and <a href="https://www.haskell.org">Haskell</a>.</div>
+      <div>Copyright &copy; 2008-2023 <a href="https://chungyc.org/">Yoo Chung</a></div>
     </footer>
   </body>
 
