--- a/site/templates/default.html
+++ b/site/templates/default.html
@@ -16,6 +16,7 @@
     <meta name="description" content="$description$">
     $-endif$
 
+    <link rel="icon" type="image/png" href="/favicon.svg">
     <link rel="stylesheet" href="/styles/default.css">
     <link rel="alternate" type="application/rss+xml" href="/feed/">
   </head>
