--- a/site/templates/default.html
+++ b/site/templates/default.html
@@ -50,6 +50,7 @@
         <a href="/">Home</a>
         <a href="/about/">About</a>
         <a href="/archives/">Archives</a>
+        <a href="/contact/">Contact</a>
       </nav>
     </header>
 
