Remove articleBody; not plain text.

--- a/site/templates/post.html
+++ b/site/templates/post.html
@@ -11,7 +11,7 @@
         <p>Updated on <span itemprop="dateModified" content="$updated$T00:00:00+00:00">$updated$</span>.</p>
         $-endif$
     </section>
-    <section itemprop="articleBody">
+    <section>
         $body$
     </section>
 </article>
