--- a/site/templates/default.html
+++ b/site/templates/default.html
@@ -19,6 +19,7 @@
     <link rel="icon" type="image/png" href="/favicon.svg">
     <link rel="stylesheet" href="/styles/default.css">
     <link rel="alternate" type="application/rss+xml" href="/feed/">
+    <link rel="privacy-policy" href="/about/#privacy">
 
     $-if(math)$
     <!-- Use KaTeX to render math. -->
