--- a/site/templates/default.html
+++ b/site/templates/default.html
@@ -65,7 +65,7 @@
 
     <footer>
       <div>Powered by <a href="https://jaspervdj.be/hakyll/">Hakyll</a> and <a href="https://www.haskell.org">Haskell</a>.</div>
-      <div>Copyright &copy; 2008-2023 <a href="https://chungyc.org/">Yoo Chung</a></div>
+      <div>Copyright &copy; 2008&ndash;2024 <a href="https://chungyc.org/">Yoo Chung</a></div>
     </footer>
   </body>
 
