--- a/site/templates/archive.html
+++ b/site/templates/archive.html
@@ -1,5 +1,10 @@
+$for(years)$
+<section id="year-$year$">
+<h2>$year$</h2>
 <ul>
 $for(posts)$
 <li><a href="$url$">$title$</a> - $published$</li>  
 $endfor$
 </ul>
+</section>
+$endfor$
