Add me link to Mastodon.

--- a/site/templates/default.html
+++ b/site/templates/default.html
@@ -20,6 +20,9 @@
     <link rel="stylesheet" href="/styles/default.css">
     <link rel="alternate" type="application/rss+xml" href="/feed/">
     <link rel="privacy-policy" href="/about/#privacy">
+    $-if(front)$
+    <link rel="me" href="https://mathstodon.xyz/@chungyc">
+    $-endif$
 
     $-if(math)$
     <!-- Use KaTeX to render math. -->
