Add Mastodon author attribution.

--- a/site/templates/post.html
+++ b/site/templates/post.html
@@ -5,6 +5,7 @@
         <p>By <span itemprop="author" itemscope itemtype="https://schema.org/Person"><span itemprop="name">$author$</span></span>.</p>
         $-else$
         <p>By <span itemprop="author" itemscope itemtype="https://schema.org/Person"><span itemprop="name">Yoo Chung</span><meta itemprop="url" content="https://chungyc.org/"/></span>.</p>
+        <meta name="fediverse:creator" content="@chungyc@mathstodon.xyz">
         $-endif$
         <p>Published on <span itemprop="datePublished" content="$published$T00:00:00+00:00">$published$</span>.</p>
         $-if(updated)$
