--- a/site/templates/front.html
+++ b/site/templates/front.html
@@ -1,23 +1,28 @@
-$-for(posts)$
-<article class="summary">
-  <h2><a href="$url$">$title$</a></h2>
-  <section class="byline">
-    $-if(author)$
-    <p>By $author$.</p>
-    $-endif$
-    <p>Published on $published$.</p>
-  </section>
-  <section>
-    $-if(teaser)$
-    $-teaser$
-    <p><em><a href="$url$">(more...)</a></em></p>
-    $-else$
-    $-body$
-    $-endif$
-  </section>
-</article>
-$-endfor$
+<section itemscope itemtype="https://schema.org/Blog">
+  <meta itemprop="name" content="Stochastic Scribbles"/>
+  <meta itemprop="image" content="/favicon.svg" />
 
-<p>
-  More posts are in the <a href="/archives/">archives</a>.
-</p>
+  $-for(posts)$
+  <article class="summary" itemprop="blogPost" itemscope itemtype="https://schema.org/BlogPosting">
+    <h2><a itemprop="url" href="$url$"><span itemprop="headline">$title$</span></a></h2>
+    <section class="byline">
+      $-if(author)$
+      <p>By $author$.</p>
+      $-endif$
+      <p>Published on $published$.</p>
+    </section>
+    <section>
+      $-if(teaser)$
+      $-teaser$
+      <p><em><a href="$url$">(more...)</a></em></p>
+      $-else$
+      $-body$
+      $-endif$
+    </section>
+  </article>
+  $-endfor$
+
+  <p>
+    More posts are in the <a href="/archives/">archives</a>.
+  </p>
+</section>
