--- a/site/templates/archive.html
+++ b/site/templates/archive.html
@@ -2,9 +2,11 @@ $for(years)$
 <section id="year-$year$">
 <h2>$year$</h2>
 <ul>
-$for(posts)$
-<li><a href="$url$">$title$</a> - $published$</li>  
-$endfor$
+  $-for(posts)$
+  <li itemscope itemtype="https://schema.org/BlogPosting">
+    <a itemprop="url" href="$url$"><span itemprop="headline">$title$</span></a> - $published$
+  </li>
+  $-endfor$
 </ul>
 </section>
 $endfor$
