Identify RSS Parrot account as self.

--- a/site/templates/default.html
+++ b/site/templates/default.html
@@ -22,6 +22,7 @@
     <link rel="privacy-policy" href="/about/#privacy">
     $-if(front)$
     <link rel="me" href="https://mathstodon.xyz/@chungyc">
+    <link rel="me" href="https://rss-parrot.net/@blog.chungyc.org">
     $-endif$
 
     <meta property="og:title" content="$if(front)$Stochastic Scribbles$else$$title$$endif$">
