--- a/site/templates/default.html
+++ b/site/templates/default.html
@@ -23,7 +23,7 @@
     $-if(front)$
     <link rel="me" href="https://mathstodon.xyz/@chungyc">
     <link rel="me" href="https://rss-parrot.net/@blog.chungyc.org">
-    <link rel="me" href="ttps://web.brid.gy/r/https://blog.chungyc.org/">
+    <link rel="me" href="https://web.brid.gy/r/https://blog.chungyc.org/">
     $-endif$
 
     <meta property="og:title" content="$if(front)$Stochastic Scribbles$else$$title$$endif$">
