--- a/site/templates/default.html
+++ b/site/templates/default.html
@@ -21,9 +21,9 @@
     <link rel="alternate" type="application/rss+xml" href="/feed/">
     <link rel="privacy-policy" href="/about/#privacy">
     $-if(front)$
-    <link rel="me" href="https://mathstodon.xyz/@chungyc">
-    <link rel="me" href="https://rss-parrot.net/@blog.chungyc.org">
-    <link rel="me" href="https://web.brid.gy/r/https://blog.chungyc.org/">
+    <link rel="me" href="https://mathstodon.xyz/users/chungyc">
+    <link rel="me" href="https://rss-parrot.net/u/blog.chungyc.org">
+    <link rel="me" href="https://web.brid.gy/blog.chungyc.org">
     $-endif$
 
     <meta property="og:title" content="$if(front)$Stochastic Scribbles$else$$title$$endif$">
