Use @-style URL.

--- a/site/templates/default.html
+++ b/site/templates/default.html
@@ -21,7 +21,7 @@
     <link rel="alternate" type="application/rss+xml" href="/feed/">
     <link rel="privacy-policy" href="/about/#privacy">
     $-if(front)$
-    <link rel="me" href="https://mathstodon.xyz/users/chungyc">
+    <link rel="me" href="https://mathstodon.xyz/@chungyc">
     <link rel="me" href="https://rss-parrot.net/u/blog.chungyc.org">
     <link rel="me" href="https://web.brid.gy/blog.chungyc.org">
     $-endif$
