Article on moon landing hoaxes.  Also remove whitespace in author bylines.

--- a/site/templates/post.html
+++ b/site/templates/post.html
@@ -18,10 +18,10 @@
         <p>
           By
           <span itemprop="author" itemscope itemtype="https://schema.org/Person">
-            <span itemprop="name">Yoo Chung</span>
+            <span itemprop="name">Yoo Chung</span>.
             <link itemprop="url" href="https://chungyc.org/"/>
             <meta name="fediverse:creator" content="@chungyc@mathstodon.xyz"/>
-          </span>.
+          </span>
         </p>
         $-endif$
         <p>Published on <span itemprop="datePublished" content="$published$T00:00:00+00:00">$published$</span>.</p>
